added swagger.json
